--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -29,56 +29,81 @@ jobs:
       run: |
         echo "Preparing payload..."
         
-        # Set GitHub-specific variables
-        GITHUB_HEAD_REF="${{ github.head_ref }}"
-        GITHUB_BASE_REF="${{ github.base_ref }}"
-        GITHUB_PR_NUMBER="${{ github.event.number }}"
-        GITHUB_RUN_ID="${{ github.run_id }}"
-        GITHUB_RUN_NUMBER="${{ github.run_number }}"
-        GITHUB_ACTOR="${{ github.actor }}"
-        GITHUB_WORKFLOW="${{ github.workflow }}"
-        GITHUB_JOB="${{ github.job }}"
-        GITHUB_ACTION="${{ github.action }}"
-        GITHUB_EVENT_NAME="${{ github.event_name }}"
-        GITHUB_REF_NAME="${{ github.ref_name }}"
-        GITHUB_REF_TYPE="${{ github.ref_type }}"
-        GITHUB_REPOSITORY="${{ github.repository }}"
-        GITHUB_REPOSITORY_OWNER="${{ github.repository_owner }}"
-        GITHUB_SHA="${{ github.sha }}"
-        GITHUB_WORKSPACE="${{ github.workspace }}"
-        GITHUB_SERVER_URL="${{ github.server_url }}"
-        GITHUB_API_URL="${{ github.api_url }}"
-        GITHUB_GRAPHQL_URL="${{ github.graphql_url }}"
-        
         # Default security API URL if not set in secrets
         SECURITY_API_URL="${SECURITY_API_URL:-https://7e43-34-93-21-162.ngrok-free.app/ci}"
         TENANT_ID="${TENANT_ID:-55}"
         
-        # Send metadata to security API
+        # Create comprehensive GitHub payload using the full context
+        echo "Creating GitHub payload with full context..."
+        
+        # Send complete GitHub payload to security API
         response=$(curl -s -w "%{http_code}" -X POST "$SECURITY_API_URL" \
         -H "Content-Type: application/json" \
         -d '{
-          "tenant":"'$TENANT_ID'",
-          "CI": "true",
-          "GITHUB_RUN_ID": "'$GITHUB_RUN_ID'",
-          "GITHUB_RUN_NUMBER": "'$GITHUB_RUN_NUMBER'",
-          "GITHUB_WORKSPACE": "'$GITHUB_WORKSPACE'",
-          "GITHUB_SHA": "'$GITHUB_SHA'",
-          "GITHUB_REPOSITORY": "'$GITHUB_REPOSITORY'",
-          "GITHUB_REPOSITORY_OWNER": "'$GITHUB_REPOSITORY_OWNER'",
-          "GITHUB_REF_NAME": "'$GITHUB_REF_NAME'",
-          "GITHUB_REF_TYPE": "'$GITHUB_REF_TYPE'",
-          "GITHUB_HEAD_REF": "'$GITHUB_HEAD_REF'",
-          "GITHUB_BASE_REF": "'$GITHUB_BASE_REF'",
-          "GITHUB_PR_NUMBER": "'$GITHUB_PR_NUMBER'",
-          "GITHUB_ACTOR": "'$GITHUB_ACTOR'",
-          "GITHUB_WORKFLOW": "'$GITHUB_WORKFLOW'",
-          "GITHUB_JOB": "'$GITHUB_JOB'",
-          "GITHUB_ACTION": "'$GITHUB_ACTION'",
-          "GITHUB_EVENT_NAME": "'$GITHUB_EVENT_NAME'",
-          "GITHUB_SERVER_URL": "'$GITHUB_SERVER_URL'",
-          "GITHUB_API_URL": "'$GITHUB_API_URL'",
-          "GITHUB_GRAPHQL_URL": "'$GITHUB_GRAPHQL_URL'"
+          "tenant": "'$TENANT_ID'",
+          "CI": true,
+          "platform": "github",
+          "github": {
+            "action": "${{ github.action }}",
+            "actor": "${{ github.actor }}",
+            "api_url": "${{ github.api_url }}",
+            "base_ref": "${{ github.base_ref }}",
+            "event_name": "${{ github.event_name }}",
+            "event_path": "${{ github.event_path }}",
+            "graphql_url": "${{ github.graphql_url }}",
+            "head_ref": "${{ github.head_ref }}",
+            "job": "${{ github.job }}",
+            "path": "${{ github.path }}",
+            "ref": "${{ github.ref }}",
+            "ref_name": "${{ github.ref_name }}",
+            "ref_protected": ${{ github.ref_protected }},
+            "ref_type": "${{ github.ref_type }}",
+            "repository": "${{ github.repository }}",
+            "repository_id": "${{ github.repository_id }}",
+            "repository_owner": "${{ github.repository_owner }}",
+            "repository_owner_id": "${{ github.repository_owner_id }}",
+            "repositoryUrl": "${{ github.repositoryUrl }}",
+            "retention_days": "${{ github.retention_days }}",
+            "run_attempt": "${{ github.run_attempt }}",
+            "run_id": "${{ github.run_id }}",
+            "run_number": "${{ github.run_number }}",
+            "server_url": "${{ github.server_url }}",
+            "sha": "${{ github.sha }}",
+            "token": "[MASKED]",
+            "triggering_actor": "${{ github.triggering_actor }}",
+            "workflow": "${{ github.workflow }}",
+            "workflow_ref": "${{ github.workflow_ref }}",
+            "workflow_sha": "${{ github.workflow_sha }}",
+            "workspace": "${{ github.workspace }}"
+          },
+          "event": ${{ toJSON(github.event) }},
+          "runner": {
+            "os": "${{ runner.os }}",
+            "arch": "${{ runner.arch }}",
+            "name": "${{ runner.name }}",
+            "environment": "${{ runner.environment }}",
+            "tool_cache": "${{ runner.tool_cache }}",
+            "temp": "${{ runner.temp }}"
+          },
+          "env": {
+            "CI": "${{ env.CI }}",
+            "GITHUB_ACTIONS": "${{ env.GITHUB_ACTIONS }}",
+            "RUNNER_OS": "${{ env.RUNNER_OS }}",
+            "RUNNER_ARCH": "${{ env.RUNNER_ARCH }}",
+            "RUNNER_NAME": "${{ env.RUNNER_NAME }}",
+            "RUNNER_ENVIRONMENT": "${{ env.RUNNER_ENVIRONMENT }}"
+          },
+          "job": {
+            "container": ${{ toJSON(job.container) }},
+            "services": ${{ toJSON(job.services) }},
+            "status": "${{ job.status }}"
+          },
+          "steps": ${{ toJSON(steps) }},
+          "strategy": ${{ toJSON(strategy) }},
+          "matrix": ${{ toJSON(matrix) }},
+          "inputs": ${{ toJSON(inputs) }},
+          "vars": ${{ toJSON(vars) }},
+          "secrets": "[MASKED]"
         }')
         
         # Extract HTTP status code and response body
@@ -274,39 +299,39 @@ jobs:
           if echo "$response_body" | grep -q "pass" || [ "$api_status" = "pass" ]; then
             echo "✅ Pipeline PASSED - Sending SUCCESS notifications to all platforms"
             
-            SUCCESS_MESSAGE="✅ *SECURITY SCAN PASSED* ✅\\n\\n📊 *Repository:* $GITHUB_REPOSITORY\\n🔀 *Branch:* $GITHUB_REF_NAME\\n🔗 *PR:* #$GITHUB_PR_NUMBER\\n🚀 *Run:* #$GITHUB_RUN_NUMBER\\n👤 *Actor:* $GITHUB_ACTOR\\n📝 *Commit:* \`$GITHUB_SHA\`\\n\\n🔒 *SECURITY RESULTS*\\n✅ *Status:* ${api_status:-'pass'}\\n🎯 *Result:* ${api_reason:-'All security checks passed'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n🆔 *Pipeline UUID:* \`${pipeline_uuid:-'N/A'}\`\\n\\n📈 *VULNERABILITY SUMMARY*\\n🔴 *High/Critical:* ${high_critical:-0}\\n🟡 *Medium:* ${medium:-0}\\n🟢 *Low:* ${low:-0}\\n🔑 *Secrets:* ${secrets:-0}\\n📊 *Total Issues:* ${total_issues:-0}\\n\\n💡 *API RECOMMENDATIONS*\\n${recommendations:-'• No critical actions required'}\\n\\n📡 *HTTP Code:* $http_code\\n⏰ *Time:* $(date -u)\\n\\n🎊 *Great job!* No critical security issues found!"
+            SUCCESS_MESSAGE="✅ *SECURITY SCAN PASSED* ✅\\n\\n📊 *Repository:* ${{ github.repository }}\\n🔀 *Branch:* ${{ github.ref_name }}\\n🔗 *PR:* #${{ github.event.number }}\\n🚀 *Run:* #${{ github.run_number }}\\n👤 *Actor:* ${{ github.actor }}\\n📝 *Commit:* \`${{ github.sha }}\`\\n\\n🔒 *SECURITY RESULTS*\\n✅ *Status:* ${api_status:-'pass'}\\n🎯 *Result:* ${api_reason:-'All security checks passed'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n🆔 *Pipeline UUID:* \`${pipeline_uuid:-'N/A'}\`\\n\\n📈 *VULNERABILITY SUMMARY*\\n🔴 *High/Critical:* ${high_critical:-0}\\n🟡 *Medium:* ${medium:-0}\\n🟢 *Low:* ${low:-0}\\n🔑 *Secrets:* ${secrets:-0}\\n📊 *Total Issues:* ${total_issues:-0}\\n\\n💡 *API RECOMMENDATIONS*\\n${recommendations:-'• No critical actions required'}\\n\\n📡 *HTTP Code:* $http_code\\n⏰ *Time:* $(date -u)\\n\\n🎊 *Great job!* No critical security issues found!"
             
             # Send to all platforms
             send_slack_notification "$SUCCESS_MESSAGE" "success"
             send_google_chat_notification "$SUCCESS_MESSAGE" "success"
             send_teams_notification "$SUCCESS_MESSAGE" "success"
-            send_email_notification "✅ Security Scan Passed - $GITHUB_REPOSITORY" "$SUCCESS_MESSAGE" "success"
+            send_email_notification "✅ Security Scan Passed - ${{ github.repository }}" "$SUCCESS_MESSAGE" "success"
             
             exit 0
             
           elif echo "$response_body" | grep -q "fail" || [ "$api_status" = "fail" ]; then
             echo "❌ Pipeline FAILED - Sending FAILURE notifications to all platforms"
             
-            FAILURE_MESSAGE="🚨 *SECURITY SCAN FAILED* 🚨\\n\\n📊 *Repository:* $GITHUB_REPOSITORY\\n🔀 *Branch:* $GITHUB_REF_NAME\\n🔗 *PR:* #$GITHUB_PR_NUMBER\\n🚀 *Run:* #$GITHUB_RUN_NUMBER\\n👤 *Actor:* $GITHUB_ACTOR\\n📝 *Commit:* \`$GITHUB_SHA\`\\n\\n🔒 *SECURITY RESULTS*\\n❌ *Status:* ${api_status:-'fail'}\\n🚨 *Issue:* ${api_reason:-'Security vulnerabilities detected'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n🆔 *Pipeline UUID:* \`${pipeline_uuid:-'N/A'}\`\\n\\n📈 *VULNERABILITY SUMMARY*\\n🔴 *High/Critical:* ${high_critical:-0} ⚠️\\n🟡 *Medium:* ${medium:-0}\\n🟢 *Low:* ${low:-0}\\n🔑 *Secrets:* ${secrets:-0}\\n📊 *Total Issues:* ${total_issues:-0}\\n\\n💡 *API RECOMMENDATIONS*\\n${recommendations:-'• Review scan results and fix vulnerabilities'}\\n\\n📡 *HTTP Code:* $http_code\\n⏰ *Time:* $(date -u)\\n\\n🚨 *URGENT ACTION REQUIRED!*"
+            FAILURE_MESSAGE="🚨 *SECURITY SCAN FAILED* 🚨\\n\\n📊 *Repository:* ${{ github.repository }}\\n🔀 *Branch:* ${{ github.ref_name }}\\n🔗 *PR:* #${{ github.event.number }}\\n🚀 *Run:* #${{ github.run_number }}\\n👤 *Actor:* ${{ github.actor }}\\n📝 *Commit:* \`${{ github.sha }}\`\\n\\n🔒 *SECURITY RESULTS*\\n❌ *Status:* ${api_status:-'fail'}\\n🚨 *Issue:* ${api_reason:-'Security vulnerabilities detected'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n🆔 *Pipeline UUID:* \`${pipeline_uuid:-'N/A'}\`\\n\\n📈 *VULNERABILITY SUMMARY*\\n🔴 *High/Critical:* ${high_critical:-0} ⚠️\\n🟡 *Medium:* ${medium:-0}\\n🟢 *Low:* ${low:-0}\\n🔑 *Secrets:* ${secrets:-0}\\n📊 *Total Issues:* ${total_issues:-0}\\n\\n💡 *API RECOMMENDATIONS*\\n${recommendations:-'• Review scan results and fix vulnerabilities'}\\n\\n📡 *HTTP Code:* $http_code\\n⏰ *Time:* $(date -u)\\n\\n🚨 *URGENT ACTION REQUIRED!*"
             
             # Send to all platforms
             send_slack_notification "$FAILURE_MESSAGE" "failure"
             send_google_chat_notification "$FAILURE_MESSAGE" "failure"
             send_teams_notification "$FAILURE_MESSAGE" "failure"
-            send_email_notification "🚨 Security Scan Failed - $GITHUB_REPOSITORY" "$FAILURE_MESSAGE" "failure"
+            send_email_notification "🚨 Security Scan Failed - ${{ github.repository }}" "$FAILURE_MESSAGE" "failure"
             
             exit 1
             
           else
             echo "⚠️ Pipeline completed - Sending INFO notifications to all platforms"
             
-            INFO_MESSAGE="ℹ️ *SECURITY SCAN INFO* ℹ️\\n\\n📊 *Repository:* $GITHUB_REPOSITORY\\n🔀 *Branch:* $GITHUB_REF_NAME\\n🔗 *PR:* #$GITHUB_PR_NUMBER\\n🚀 *Run:* #$GITHUB_RUN_NUMBER\\n👤 *Actor:* $GITHUB_ACTOR\\n\\n🔒 *SECURITY RESULTS*\\n📡 *Status:* ${api_status:-'Unknown'}\\n📄 *Response:* ${api_reason:-'No explicit pass/fail status found'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n\\n📈 *VULNERABILITY SUMMARY*\\n🔴 *High/Critical:* ${high_critical:-'N/A'}\\n🟡 *Medium:* ${medium:-'N/A'}\\n🟢 *Low:* ${low:-'N/A'}\\n🔑 *Secrets:* ${secrets:-'N/A'}\\n📊 *Total Issues:* ${total_issues:-'N/A'}\\n\\n📊 *HTTP Code:* $http_code\\n⏰ *Time:* $(date -u)\\n\\n💡 *Note:* Security scan completed but status unclear - please review logs"
+            INFO_MESSAGE="ℹ️ *SECURITY SCAN INFO* ℹ️\\n\\n📊 *Repository:* ${{ github.repository }}\\n🔀 *Branch:* ${{ github.ref_name }}\\n🔗 *PR:* #${{ github.event.number }}\\n🚀 *Run:* #${{ github.run_number }}\\n👤 *Actor:* ${{ github.actor }}\\n\\n🔒 *SECURITY RESULTS*\\n📡 *Status:* ${api_status:-'Unknown'}\\n📄 *Response:* ${api_reason:-'No explicit pass/fail status found'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n\\n📈 *VULNERABILITY SUMMARY*\\n🔴 *High/Critical:* ${high_critical:-'N/A'}\\n🟡 *Medium:* ${medium:-'N/A'}\\n🟢 *Low:* ${low:-'N/A'}\\n🔑 *Secrets:* ${secrets:-'N/A'}\\n📊 *Total Issues:* ${total_issues:-'N/A'}\\n\\n📊 *HTTP Code:* $http_code\\n⏰ *Time:* $(date -u)\\n\\n💡 *Note:* Security scan completed but status unclear - please review logs"
             
             # Send to all platforms
             send_slack_notification "$INFO_MESSAGE" "info"
             send_google_chat_notification "$INFO_MESSAGE" "info"
             send_teams_notification "$INFO_MESSAGE" "info"
-            send_email_notification "ℹ️ Security Scan Info - $GITHUB_REPOSITORY" "$INFO_MESSAGE" "info"
+            send_email_notification "ℹ️ Security Scan Info - ${{ github.repository }}" "$INFO_MESSAGE" "info"
             
             exit 0
           fi
@@ -314,13 +339,13 @@ jobs:
         else
           echo "❌ Pipeline FAILED - Sending ERROR notifications to all platforms"
           
-          ERROR_MESSAGE="🚨 *SECURITY API ERROR* 🚨\\n\\n📊 *Repository:* $GITHUB_REPOSITORY\\n🔀 *Branch:* $GITHUB_REF_NAME\\n🔗 *PR:* #$GITHUB_PR_NUMBER\\n🚀 *Run:* #$GITHUB_RUN_NUMBER\\n👤 *Actor:* $GITHUB_ACTOR\\n\\n🔴 *HTTP Error:* $http_code\\n📡 *API Status:* ${api_status:-'API Connection Error'}\\n🔧 *Issue:* ${api_reason:-'Security API returned HTTP error'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n⏰ *Time:* $(date -u)\\n\\n💡 *ACTION REQUIRED:*\\n🔧 Check security API server status and connectivity\\n📋 Review workflow logs for detailed error information\\n🔄 Retry the workflow once API issues are resolved"
+          ERROR_MESSAGE="🚨 *SECURITY API ERROR* 🚨\\n\\n📊 *Repository:* ${{ github.repository }}\\n🔀 *Branch:* ${{ github.ref_name }}\\n🔗 *PR:* #${{ github.event.number }}\\n🚀 *Run:* #${{ github.run_number }}\\n👤 *Actor:* ${{ github.actor }}\\n\\n🔴 *HTTP Error:* $http_code\\n📡 *API Status:* ${api_status:-'API Connection Error'}\\n🔧 *Issue:* ${api_reason:-'Security API returned HTTP error'}\\n🔍 *Scan ID:* \`${scan_id:-'N/A'}\`\\n⏰ *Time:* $(date -u)\\n\\n💡 *ACTION REQUIRED:*\\n🔧 Check security API server status and connectivity\\n📋 Review workflow logs for detailed error information\\n🔄 Retry the workflow once API issues are resolved"
           
           # Send to all platforms
           send_slack_notification "$ERROR_MESSAGE" "error"
           send_google_chat_notification "$ERROR_MESSAGE" "error"
           send_teams_notification "$ERROR_MESSAGE" "error"
-          send_email_notification "🚨 Security API Error - $GITHUB_REPOSITORY" "$ERROR_MESSAGE" "error"
+          send_email_notification "🚨 Security API Error - ${{ github.repository }}" "$ERROR_MESSAGE" "error"
           
           exit 1
         fi
